# Hexer

./: .gitignore  CMakeLists.txt  CMakePresets.json
core/: CMakeLists.txt  base.h  bfgs.cpp  bfgs.h  cinolib_enhance.h  cycle.h  deformation.cpp  deformation.h  expr.h  expr_v2.h  filter.cpp  filter.h  graph.cpp  graph.h  hex_memory.h  hexer_core.h  io.cpp  io.h  kd_tree.h  mesh.cpp  mesh.h  meshIO.cpp  meshIO.h  ngs.h  old_deformation.h  op.h  ops.h  solverbase.h  tessellation.cpp  tessellation.h  threadpool.h  traits.h  transformation.h  utilities.h
hexer/: CMakeList.txt  CMakeLists.txt  Hexer.cpp  Hexer.h
hexer/GaussianSmoothFacetNormals/: CMakeLists.txt  SmoothEnergy.cpp  test_utility.h
hexer/Viewer/: CMakeLists.txt  viewer.cpp
hexer/globalOrientation/: CMakeLists.txt  GlobalOrientation.cpp
hexer/globalOrientation/logs/: opt.txt
hexer/smoother/: CMakeLists.txt  Smoother.cpp
models/: cylinder.stl  cylinder.vtu  test_Step-1_PART-1-MESH-1-1f000.vtu
script/: converter.py
visual/: CMakeLists.txt  base.h  camera.cpp  camera.h  glad.c  mesh.cpp  mesh.h  meshLoader.cpp  meshLoader.h  model.cpp  model.h  shader.cpp  shader.h  visual.cpp
visual/shader/: pure_color.fs
